Fixing minor bugs mostly in post-processing

--- a/Flexibility_options_end_to_end-UPDN.ipynb
+++ b/Flexibility_options_end_to_end-UPDN.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "8d6954ca",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
     "DAFOmodel.probTD=pyo.Param(DAFOmodel.R) #probability of exercise FO dn\n",
     "\n",
     "# Variables\n",
-    "DAFOmodel.d = pyo.Var() #slack for demand that makes demand elastic and helps us with degeneracy\n",
+    "DAFOmodel.d = pyo.Var(domain=pyo.NonNegativeReals) #slack for demand that makes demand elastic and helps us with degeneracy\n",
     "DAFOmodel.xDA=pyo.Var(DAFOmodel.G, domain=pyo.NonNegativeReals) #DA energy schedule for generators\n",
     "DAFOmodel.rgDA=pyo.Var(domain=pyo.NonNegativeReals) #DA energy schedule for renewables\n",
     "DAFOmodel.du= pyo.Var(DAFOmodel.S)\n",
@@ -79,13 +79,14 @@
     "DAFOmodel.y    = pyo.Var(DAFOmodel.S, domain=pyo.NonNegativeReals) #Auxiliary variable\n",
     "\n",
     "\n",
+    "\n",
     "#Define objective function\n",
     "def obj_expression(m):\n",
     "    return sum(m.VC[g]*m.xDA[g] for g in m.G)+sum(m.probTU[r]*m.VCUP[g]*m.hsu[r,g] for g in m.G for r in m.R)\\\n",
     "+sum(m.probTU[r]*m.PEN*m.sdu[r]  for r in m.R)-sum(m.probTD[r]*(m.VCDN[g])*m.hsd[r,g] for g in m.G for r in m.R)\\\n",
-    "+sum(m.probTD[r]*m.PENDN*m.sdd[r] for r in m.R)+sum(m.y[s] for s in m.S)*m.smallM +m.D1 *m.d+ m.D2 *m.d*m.d\\\n",
-    "+sum(0.2*m.D1*(m.du[s])  for s in m.S) +0.2*m.D2*sum((m.d+m.du[s])*(m.d+m.du[s]) for s in m.S  )\n",
-    "###### create symmetry with demand curve in real-time\n",
+    "-sum(m.probTD[r]*m.PENDN*m.sdd[r] for r in m.R)+sum(m.y[s] for s in m.S)*m.smallM \\\n",
+    "+sum(0.2*m.D1*(m.d+m.du[s])  for s in m.S) +0.2*m.D2*sum((m.d+m.du[s])*(m.d+m.du[s]) for s in m.S  )\\\n",
+    "###### create symmetry with demand curve in real-time, #+ m.D2 *m.d*m.d\n",
     "\n",
     "DAFOmodel.OBJ = pyo.Objective(rule=obj_expression)\n",
     "\n",
@@ -101,10 +102,6 @@
     "def DA_flexdn_balance(model,r):\n",
     "    return sum(model.hsd[r,g] for g in model.G) == model.hdd[r]\n",
     "DAFOmodel.Con4DN = pyo.Constraint(DAFOmodel.R, rule=DA_flexdn_balance)\n",
-    "\n",
-    "def DA_flexdn_limit(model,r):\n",
-    "    return model.hdd[r]+model.sdd[r] <=sum(model.RE[s] for s in model.S if s==r+1)-sum(model.RE[s] for s in model.S if s==r)\n",
-    "DAFOmodel.Con5 = pyo.Constraint(DAFOmodel.R, rule=DA_flexdn_limit)\n",
     "\n",
     "def DA_flex_demand(model,s):\n",
     "    return -model.du[s]+sum(model.hdd[r]+model.sdd[r] for r in model.R if r<=s-1 )-sum(model.hdu[r]+model.sdu[r] for r in model.R if r>=s )==model.RE[s]-model.rgDA\n",
@@ -152,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "fecda941",
    "metadata": {},
    "outputs": [],
@@ -178,6 +175,7 @@
     "RTsim.REDA=pyo.Param( domain=pyo.NonNegativeReals)\n",
     "RTsim.PEN=pyo.Param(within=pyo.NonNegativeIntegers)\n",
     "RTsim.PENDN=pyo.Param()\n",
+    "RTsim.DAdr=pyo.Param()\n",
     "\n",
     "# Variables\n",
     "RTsim.xup = pyo.Var(RTsim.S, RTsim.G, domain=pyo.NonNegativeReals)\n",
@@ -190,27 +188,28 @@
     "\n",
     "#Objective\n",
     "def obj_expression(m):\n",
-    "    return sum(m.prob[s]*(m.VCUP[g]*m.xup[s,g]-m.VCDN[g]*m.xdn[s,g]) for g in m.G for s in m.S)+m.PENDN*sum(m.prob[s]*m.sdup[s] for s in m.S)+m.PEN*sum(m.prob[s]*m.sddn[s] for s in m.S)+sum(m.prob[s]*(m.D1*m.d[s]+m.D2*m.d[s]*m.d[s]) for s in m.S)\n",
+    "    return sum(m.prob[s]*(m.VCUP[g]*m.xup[s,g]-m.VCDN[g]*m.xdn[s,g]) for g in m.G for s in m.S)+m.PENDN*sum(m.prob[s]*m.sdup[s] for s in m.S)+m.PEN*sum(m.prob[s]*m.sddn[s] for s in m.S)\\\n",
+    "+sum(m.prob[s]*(m.D1*(m.DAdr+m.d[s])+m.D2*(m.DAdr+m.d[s])*(m.DAdr+m.d[s])) for s in m.S)\\\n",
+    "-sum(m.prob[s]*(m.D1*(m.DAdr)+m.D2*(m.DAdr)*(m.DAdr)) for s in m.S)\n",
     "RTsim.OBJ = pyo.Objective(rule=obj_expression)\n",
     "\n",
     "#Constraints\n",
     "def RT_energy_balance(model,s):\n",
-    "    return sum(model.xup[s,g]-model.xdn[s,g] for g in model.G)+ model.rgup[s]-model.rgdn[s]+model.d[s] == 0\n",
-    "\n",
-    "def RT_capacity_cons(model,s, g):\n",
-    "    return model.xDA[g]+model.xup[s,g] <= model.CAP[g]\n",
-    "\n",
-    "def RT_capacity_min(model,s, g):\n",
-    "    return model.xDA[g]-model.xdn[s,g] >=0\n",
+    "    return sum(model.xup[s,g]-model.xdn[s,g] for g in model.G)+ model.rgup[s]-model.rgdn[s] +model.d[s]== 0\n",
     "\n",
     "def RT_RE_availability(model,s):\n",
-    "    return model.rgup[s]-model.rgdn[s]+model.sdup[s]-model.sddn[s] ==model.RE[s]-model.REDA\n",
+    "    return model.rgup[s]-model.rgdn[s]+model.sdup[s]-model.sddn[s] ==model.RE[s]-model.REDA \n",
     "\n",
     "def RT_ramp_up(model,s,g):\n",
     "    return model.xup[s,g] <=model.RR[g]\n",
     "\n",
     "def RT_ramp_dn(model,s,g):\n",
     "    return model.xdn[s,g] <= model.RR[g]\n",
+    "def RT_capacity_cons(model,s, g):\n",
+    "    return model.xDA[g]+model.xup[s,g] <= model.CAP[g]\n",
+    "\n",
+    "def RT_capacity_min(model,s, g):\n",
+    "    return model.xDA[g]-model.xdn[s,g] >=0\n",
     "\n",
     "# Numbering of constraints follows the RT problem\n",
     "RTsim.Con3 = pyo.Constraint(RTsim.S, rule=RT_energy_balance)\n",
@@ -234,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "5f0ed8c1",
    "metadata": {},
    "outputs": [],
@@ -252,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "a6d93d13",
    "metadata": {},
    "outputs": [],
@@ -319,6 +318,7 @@
     "             'PEN':dataDA[None][\"PEN\"],\n",
     "             'PENDN':dataDA[None][\"PENDN\"],\n",
     "             'REDA':{None: temp},\n",
+    "             'DAdr':{None: i.d.value}\n",
     "            }}\n",
     "        iRT = RTsim.create_instance(dataRT)\n",
     "        opt.solve(iRT)\n",
@@ -340,6 +340,7 @@
     "           Total.at['curtail cost',s]=iRT.prob[s]*(iRT.PENDN*iRT.sdup[s].value)\n",
     "        price_convergence=Total.at['price','DA']-Total[Total.columns[1:]].loc['price'].sum()\n",
     "        premium_convergence=pd.DataFrame()\n",
+    "        premiums=Gross_margins[Gross_margins.columns[Gross_margins.columns.str.startswith('up')]].sum().sum()+Gross_margins[Gross_margins.columns[Gross_margins.columns.str.startswith('down')]].sum().sum()\n",
     "        premium_convergence['UP']=Gross_margins[Gross_margins.columns[Gross_margins.columns.str.startswith('up')]].sum(axis=1)+RTpayoffs[RTpayoffs.columns[RTpayoffs.columns.str.startswith('UP')]].sum(axis=1)\n",
     "        premium_convergence['DN']=Gross_margins[Gross_margins.columns[Gross_margins.columns.str.startswith('down')]].sum(axis=1)+RTpayoffs[RTpayoffs.columns[RTpayoffs.columns.str.startswith('DN')]].sum(axis=1)\n",
     "        premium_convergence.index.name='Generator'\n",
@@ -347,7 +348,13 @@
     "        Total_margin=pd.DataFrame()\n",
     "        for k in range(1,6):\n",
     "             Total_margin[k]=iRT.prob[k]*Gross_margins.sum(axis=1)+RTmargins[k]+RTpayoffs[RTpayoffs.columns[RTpayoffs.columns.str.endswith(str(k))]].sum(axis=1)\n",
-    "        writer = pd.ExcelWriter('Test_output_files/Results_SectionV/FO_EXP_'+l+\"_v\"+date.today().strftime(\"%Y_%m_%d\")+'.xlsx')      \n",
+    "             Total_margin.at['RE',k]=(iRT.dual[iRT.Con3[k]]*(iRT.rgup[k].value-iRT.rgdn[k].value)) +iRT.prob[k]*temp*i.dual[i.Con3]-iRT.prob[k]*premiums\n",
+    "             if k>1:\n",
+    "                Total_margin.at['RE',k]=Total_margin.at['RE',k]-RTpayoffs[\"DN\"+str(k)].sum()\n",
+    "             if k<5:\n",
+    "                Total_margin.at['RE',k]=Total_margin.at['RE',k]-RTpayoffs[\"UP\"+str(k)].sum()\n",
+    "             Total_margin.at['DR',k]=iRT.dual[iRT.Con3[k]]*iRT.d[k].value+iRT.prob[k]*i.d.value*i.dual[i.Con3] -iRT.prob[k]*(i.D1*(iRT.d[k].value+i.d.value))-iRT.prob[k]*(i.D2*(iRT.d[k].value+i.d.value)*(iRT.d[k].value+i.d.value))\n",
+    "        writer = pd.ExcelWriter('Test_output_files/Results_SectionV/FO_EXP_'+l+\"_v\"+date.today().strftime(\"%Y_%m_%d\")+'revision.xlsx')      \n",
     "        round(premium_convergence,2).to_excel(writer,'Premium_convergence')\n",
     "        round(Total,2).to_excel(writer,'System_metrics')\n",
     "        round(RTmargins,2).to_excel(writer,'RTmargins')\n",
@@ -366,14 +373,22 @@
     "        Summary_price_convergence[l]=Total.loc['price'].transpose()\n",
     "        Summary_premium_convergence_up[l]=premium_convergence['UP']\n",
     "        Summary_premium_convergence_down[l]=premium_convergence['DN']\n",
-    "        Summary_margin_intermittency[l]=Total_margin.apply(lambda row: sum(row>0.01),axis=1)\n",
+    "        #Summary_margin_intermittency[l]=Total_margin.apply(lambda row: sum(row>0.01),axis=1)\n",
     "        Summary_costCURT[l]=Total.loc['curtail cost'].transpose()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f34db54a",
+   "id": "4ca9ddbb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cff69450",
    "metadata": {},
    "outputs": [],
    "source": []
