--- a/imbalance_reserves-end_to_end-withARB.ipynb
+++ b/imbalance_reserves-end_to_end-withARB.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "a1593cd1",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "8d6954ca",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
     "# Decision variables\n",
     "DAIRmodel.xDA=pyo.Var(DAIRmodel.G, domain=pyo.NonNegativeReals)\n",
     "DAIRmodel.rgDA=pyo.Var(domain=pyo.NonNegativeReals)\n",
-    "DAIRmodel.d=pyo.Var()\n",
+    "DAIRmodel.d=pyo.Var(domain=pyo.NonNegativeReals)\n",
     "DAIRmodel.arb=pyo.Var()\n",
     "#Decision variables for IR\n",
     "DAIRmodel.isu  = pyo.Var(DAIRmodel.G, domain=pyo.NonNegativeReals) #IR up provided by supplier g\n",
@@ -93,17 +93,27 @@
     "DAIRmodel.OBJ = pyo.Objective(rule=obj_expression)\n",
     "\n",
     "def DA_energy_balance(model):\n",
-    "    return sum(model.xDA[g] for g in model.G)+ model.rgDA +model.arb == model.DEMAND\n",
+    "    return sum(model.xDA[g] for g in model.G)+ model.rgDA +model.arb +model.d == model.DEMAND\n",
     "DAIRmodel.Con3 = pyo.Constraint(expr=DA_energy_balance) \n",
     "\n",
-    "def DA_IRup_balance(model,r):\n",
-    "    return sum(model.isu[g] for g in model.G) +sum(model.siu[t] for t in model.R if t>=r) +model.iupre >= max(0, np.mean(np.array([model.RE[s] for s in model.S]))-sum(model.RE[s] for s in model.S if s==r))\n",
-    "DAIRmodel.Con4UP= pyo.Constraint(DAIRmodel.R, rule=DA_IRup_balance)\n",
+    "def DA_IRup_balance(model):\n",
+    "    return sum(model.isu[g] for g in model.G) +sum(model.siu[t] for t in model.R) +model.iupre >= np.mean(np.array([model.RE[s] for s in model.S]))-min(model.RE[s] for s in model.S)\n",
+    "DAIRmodel.Con4UP= pyo.Constraint(rule=DA_IRup_balance)\n",
     "\n",
-    "def DA_IRdn_balance(model,r):\n",
-    "    return sum(model.isd[g] for g in model.G)+sum(model.sid[t] for t in model.R if t<=r) +model.idnre>= max(0, sum(model.RE[s] for s in model.S if s==r+1)-np.mean(np.array([model.RE[s] for s in model.S])))\n",
-    "DAIRmodel.Con4DN = pyo.Constraint(DAIRmodel.R, rule=DA_IRdn_balance)\n",
-    "                                                                                                    \n",
+    "def shortage_IR_up(model,r):\n",
+    "    return model.siu[r]<=max(0, min(np.mean(np.array([model.RE[s] for s in model.S])),model.RE[r+1])-model.RE[r])\n",
+    "DAIRmodel.Con4UPstep= pyo.Constraint(DAIRmodel.R,rule=shortage_IR_up)\n",
+    "\n",
+    "def DA_IRdn_balance(model):\n",
+    "    return sum(model.isd[g] for g in model.G)+sum(model.sid[t] for t in model.R) +model.idnre>= max(model.RE[s] for s in model.S)-np.mean(np.array([model.RE[s] for s in model.S]))\n",
+    "DAIRmodel.Con4DN = pyo.Constraint(rule=DA_IRdn_balance)\n",
+    "\n",
+    "def shortage_IR_dn(model,r):\n",
+    "    return model.sid[r]<=max(0, model.RE[r+1]-max(np.mean(np.array([model.RE[s] for s in model.S])),model.RE[r]))\n",
+    "DAIRmodel.Con4DNstep= pyo.Constraint(DAIRmodel.R,rule=shortage_IR_dn)\n",
+    "\n",
+    "\n",
+    "\n",
     "def RE_dn(model):\n",
     "    return model.idnre<= model.rgDA\n",
     "DAIRmodel.Con5 = pyo.Constraint(expr=RE_dn)\n",
@@ -151,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "a71efc99",
    "metadata": {},
    "outputs": [],
@@ -176,11 +186,12 @@
     "RTsim.PEN=pyo.Param(within=pyo.NonNegativeIntegers)\n",
     "RTsim.PENDN=pyo.Param()\n",
     "RTsim.ARB=pyo.Param()\n",
+    "RTsim.DAdr=pyo.Param()\n",
     "\n",
     "# Variables\n",
     "RTsim.xup = pyo.Var(RTsim.S, RTsim.G, domain=pyo.NonNegativeReals)\n",
     "RTsim.xdn = pyo.Var(RTsim.S, RTsim.G, domain=pyo.NonNegativeReals)\n",
-    "RTsim.d= pyo.Var(RTsim.S)\n",
+    "RTsim.d= pyo.Var(RTsim.S, domain=pyo.NonNegativeReals)\n",
     "RTsim.rgup = pyo.Var(RTsim.S, domain=pyo.NonNegativeReals)\n",
     "RTsim.rgdn = pyo.Var(RTsim.S, domain=pyo.NonNegativeReals)\n",
     "RTsim.sdup = pyo.Var(RTsim.S, domain=pyo.NonNegativeReals)\n",
@@ -188,7 +199,10 @@
     "\n",
     "#Objective\n",
     "def obj_expression(m):\n",
-    "    return sum(m.prob[s]*m.VC[g]*(m.xup[s,g]-m.xdn[s,g]) for g in m.G for s in m.S)+m.PENDN*sum(m.prob[s]*m.sdup[s] for s in m.S)+m.PEN*sum(m.prob[s]*m.sddn[s] for s in m.S)+sum(m.prob[s]*(m.D1*m.d[s]+m.D2*m.d[s]*m.d[s]) for s in m.S)\n",
+    "    return sum(m.prob[s]*m.VC[g]*(m.xup[s,g]-m.xdn[s,g]) for g in m.G for s in m.S)\\\n",
+    "-m.PENDN*sum(m.prob[s]*m.sdup[s] for s in m.S)+m.PEN*sum(m.prob[s]*m.sddn[s] for s in m.S)\\\n",
+    "+sum(m.prob[s]*(m.D1*(m.DAdr+m.d[s])+m.D2*(m.DAdr+m.d[s])*(m.DAdr+m.d[s])) for s in m.S)\\\n",
+    "-sum(m.prob[s]*(m.D1*(m.DAdr)+m.D2*(m.DAdr)*(m.DAdr)) for s in m.S)\n",
     "RTsim.OBJ = pyo.Objective(rule=obj_expression)\n",
     "\n",
     "#Constraints\n",
@@ -202,7 +216,7 @@
     "    return model.xDA[g]-model.xdn[s,g] >=0\n",
     "\n",
     "def RT_RE_availability(model,s):\n",
-    "    return model.rgup[s]-model.rgdn[s]+model.sdup[s]-model.sddn[s] ==model.RE[s]-model.REDA\n",
+    "    return model.rgup[s]-model.rgdn[s]+model.sdup[s]-model.sddn[s] ==model.RE[s]-model.REDA \n",
     "\n",
     "def RT_ramp_up(model,s,g):\n",
     "    return model.xup[s,g] <=model.RR[g]\n",
@@ -232,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "f69773f5",
    "metadata": {},
    "outputs": [],
@@ -242,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "f403857a",
    "metadata": {},
    "outputs": [],
@@ -274,13 +288,13 @@
     "        E_grid_data = {(G): v.value for (G), v in i.isd.items()}\n",
     "        df ['isd']= pd.DataFrame.from_dict(E_grid_data, orient=\"index\", columns=[\"isd\"])\n",
     "        Prices=pd.DataFrame()\n",
-    "        Prices['up']=[i.dual[i.Con4UP[r]] for r in i.R]\n",
-    "        Prices['down']=[i.dual[i.Con4DN[r]] for r in i.R]\n",
+    "        Prices.at[0,'up']=i.dual[i.Con4UP]\n",
+    "        Prices.at[0,'down']=i.dual[i.Con4DN]\n",
     "        Gross_margins=pd.DataFrame()\n",
     "        Gross_margins[\"en\"]=np.multiply(i.dual[i.Con3]-np.array([i.VC[k] for k in i.G]), Energy['en'])\n",
     "        Gross_margins.at[0,\"en\"]=i.rgDA.value*i.dual[i.Con3]\n",
-    "        Gross_margins[\"up\"]=np.max(np.array([i.dual[i.Con4UP[r]] for r in i.R]))*df['isu']\n",
-    "        Gross_margins[\"down\"]=np.max(np.array([i.dual[i.Con4DN[r]] for r in i.R]))*df['isd']\n",
+    "        Gross_margins[\"up\"]=i.dual[i.Con4UP]*df['isu']\n",
+    "        Gross_margins[\"down\"]=i.dual[i.Con4DN]*df['isd']\n",
     "            \n",
     "        dataRT = {None:{\n",
     "            'RE': dataDA[None][\"RE\"],\n",
@@ -295,7 +309,8 @@
     "             'PEN':{None: dataDA[None][\"PEN\"][1]},\n",
     "             'PENDN':{None: dataDA[None][\"PEND\"][1]},\n",
     "             'REDA':{None: temp},\n",
-    "             'ARB':{None: i.arb.value}\n",
+    "             'ARB':{None: i.arb.value},\n",
+    "             'DAdr':{None: i.d.value}\n",
     "            }}\n",
     "        iRT = RTsim.create_instance(dataRT)\n",
     "        opt.solve(iRT)\n",
@@ -304,19 +319,21 @@
     "            RTmargins[s]=(np.multiply(iRT.dual[iRT.Con3[s]]-iRT.prob[s]*np.array([iRT.VC[k] for k in iRT.G]),np.array([iRT.xup[s,k].value-iRT.xdn[s,k].value  for k in i.G])))\n",
     "            Total.at['cost',s]=iRT.prob[s]*sum(np.multiply(np.array([i.VC[k] for k in i.G]),np.array([iRT.xup[s,g].value-iRT.xdn[s,g].value for g in iRT.G])))\n",
     "            Total.at['price',s]=iRT.dual[iRT.Con3[s]]\n",
-    "            Total.at['unmet_demand',s]=iRT.prob[s]*(iRT.D1*iRT.d[s].value+iRT.D2*iRT.d[s].value*iRT.d[s].value)\n",
+    "            Total.at['unmet_demand',s]=iRT.prob[s]*(iRT.D1*(i.d.value+iRT.d[s].value)+iRT.D2*(iRT.d[s].value+i.d.value)*(i.d.value+iRT.d[s].value))\n",
     "            Total.at['curtail cost',s]=iRT.prob[s]*(iRT.PENDN*iRT.sdup[s].value)\n",
     "        price_convergence=Total.at['price','DA']-Total[Total.columns[1:]].loc['price'].sum()\n",
     "        Total_margin=pd.DataFrame()\n",
     "        for k in range(1,6):\n",
-    "             Total_margin[k]=Gross_margins.sum(axis=1)[0:5].values+RTmargins[k]\n",
-    "        writer = pd.ExcelWriter('Test_output_files/IR_'+l+\"_v\"+date.today().strftime(\"%Y_%m_%d\")+'.xlsx')      \n",
+    "             Total_margin[k]=iRT.prob[k]*Gross_margins.sum(axis=1)[0:5].values+RTmargins[k]\n",
+    "             Total_margin.at['RE',k]=(iRT.dual[iRT.Con3[k]]*(iRT.rgup[k].value-iRT.rgdn[k].value)) +iRT.prob[k]*temp*i.dual[i.Con3]\n",
+    "        writer = pd.ExcelWriter('Test_output_files/IR_'+l+\"_v\"+date.today().strftime(\"%Y_%m_%d\")+'revision.xlsx')      \n",
     "        round(Total,2).to_excel(writer,'System_metrics')\n",
     "        round(RTmargins,2).to_excel(writer,'RTmargins')\n",
     "        round(Gross_margins,2).to_excel(writer,'Grossmargins')\n",
-    "        round(df,2).to_excel(writer,'FO_supply_AWARDS')\n",
+    "        round(df,2).to_excel(writer,'IR_supply_AWARDS')\n",
     "        round(Energy,2).to_excel(writer,'DA_energy')\n",
     "        round(Total_margin,2).to_excel(writer,'Totalmargins')\n",
+    "        round(Prices,2).to_excel(writer,'Prices')\n",
     "        pd.DataFrame(dataDA).to_excel(writer,'input_DA')\n",
     "        pd.DataFrame(dataRT).to_excel(writer,'input_RT')\n",
     "        writer.close()\n",
@@ -329,8 +346,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "2c51fdd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>up</th>\n",
+       "      <th>down</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>30.000001</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          up  down\n",
+       "0  30.000001   0.0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Prices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4252be05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i.dual[i.Con4UP]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "186aba99",
    "metadata": {},
    "outputs": [],
    "source": []
